[tool.poetry]
name = "cda-api"
version = "0.1.0"
description = ""
authors = ["tanner-coon-bh <tanner.coon@bluehalo.com>"]
readme = "README.md"

[tool.poetry.scripts]
start_api = "cda_api.main:start_api"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.135.1"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.42"
pytest = "^8.3.2"
psycopg2-binary = "^2.9.9"
sqlparse = "^0.5.1"
pyyaml = "^6.0.2"
python-multipart = "^0.0.22"
uvicorn = "^0.32.1"
tornado = "^6.5.1"
setuptools = "^78.1.1"
starlette = "^0.49.1"
wheel = "0.46.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
